--- a/Suite_qa/docker-compose.yml
+++ b/Suite_qa/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
         timeout: 20s
         retries: 10
-
+        
   redis:
     image: redis
     container_name: redis
@@ -31,7 +31,7 @@ services:
       - PROJECT_SQL_DATABASE=tutorial
       - PROJECT_SQL_USER=root
       - PROJECT_SQL_PASSWORD=1Qaz2wsx--
-      - PROJECT_TIME_ZONE=America/Bogota
+      - PROJECT_TIME_ZONE=America/Argentina/Buenos_Aires
       - REDIS_SERVER=localhost
       - REDIS_PORT=6379
       - PROJECT_CACHE_TYPE=redis
@@ -43,7 +43,31 @@ services:
       - '--server.port=8087' 
       
   credentials-api:
-    image: '283907186399.dkr.ecr.us-east-1.amazonaws.com/plug/credentials-api:v2.1.0'
+    image: '283907186399.dkr.ecr.us-east-1.amazonaws.com/plug/credentials-api:v2.2.1'
+    environment:
+      - spring.profiles.active=qa
+      - java.awt.headless=false
+      - MAX_POOL_DB=5
+      - PROJECT_SQL_SERVER=127.0.0.1
+      - PROJECT_SQL_PORT=3306
+      - PROJECT_SQL_DATABASE=tutorial
+      - PROJECT_SQL_USER=root
+      - PROJECT_SQL_PASSWORD=1Qaz2wsx--
+      - REDIS_SERVER=localhost
+      - REDIS_PORT=6379
+      - TZ=America/Argentina/Buenos_Aires
+      - PROJECT_TIME_ZONE=America/Argentina/Buenos_Aires
+      - PROJECT_CACHE_TYPE=redis
+    network_mode: host
+    entrypoint:
+      - java
+      - '-jar'
+      - credentials-api-2.2.1.jar
+      - '--server.port=8088'   
+      
+      
+  transactions-api:
+    image: '283907186399.dkr.ecr.us-east-1.amazonaws.com/plug/transactions-api:v2.2.0'
     environment:
       - spring.profiles.active=qa
       - java.awt.headless=false
@@ -53,32 +77,10 @@ services:
       - PROJECT_SQL_DATABASE=tutorial
       - PROJECT_SQL_USER=root
       - PROJECT_SQL_PASSWORD=1Qaz2wsx--
-      - PROJECT_TIME_ZONE=America/Bogota
-      - PROJECT_CACHE_TYPE=redis
-      - server.servlet.context-path=/credentials-api
-    network_mode: host
-    entrypoint:
-      - java
-      - '-jar'
-      - credentials-api-2.1.0-SNAPSHOT.jar
-      - '--server.port=8088'   
-      
-  transactions-api:
-    image: '283907186399.dkr.ecr.us-east-1.amazonaws.com/plug/transactions-api:v2.2.0'
-    environment:
-      - spring.profiles.active=qa
-      - java.awt.headless=false
-      - MAX_POOL_DB
-      - PROJECT_SQL_SERVER=localhost
-      - PROJECT_SQL_PORT=3306
-      - PROJECT_SQL_DATABASE=tutorial
-      - PROJECT_SQL_USER=root
-      - PROJECT_SQL_PASSWORD=1Qaz2wsx--
-      - PROJECT_TIME_ZONE=America/Bogota
+      - PROJECT_TIME_ZONE=America/Argentina/Buenos_Aires
       - REDIS_SERVER=127.0.0.1
       - REDIS_PORT=6379
       - PROJECT_CACHE_TYPE=redis
-      - server.servlet.context-path=/transactions-api
     network_mode: host
     entrypoint:
       - java
@@ -97,7 +99,7 @@ services:
       - PROJECT_SQL_DATABASE=tutorial
       - PROJECT_SQL_USER=root
       - PROJECT_SQL_PASSWORD=1Qaz2wsx--
-      - PROJECT_TIME_ZONE=America/Bogota
+      - PROJECT_TIME_ZONE=America/Argentina/Buenos_Aires
       - REDIS_SERVER=127.0.0.1
       - REDIS_PORT=6379
       - PROJECT_CACHE_TYPE=redis
@@ -120,7 +122,7 @@ services:
       - PROJECT_SQL_DATABASE=tutorial
       - PROJECT_SQL_USER=root
       - PROJECT_SQL_PASSWORD=1Qaz2wsx--
-      - PROJECT_TIME_ZONE=America/Bogota
+      - PROJECT_TIME_ZONE=America/Argentina/Buenos_Aires
       - REDIS_SERVER=127.0.0.1
       - REDIS_PORT=6379
       - PROJECT_CACHE_TYPE=redis
@@ -143,7 +145,7 @@ services:
       - PROJECT_SQL_DATABASE=tutorial
       - PROJECT_SQL_USER=root
       - PROJECT_SQL_PASSWORD=1Qaz2wsx--
-      - PROJECT_TIME_ZONE=America/Bogota
+      - PROJECT_TIME_ZONE=America/Argentina/Buenos_Aires
       - REDIS_SERVER=127.0.0.1
       - REDIS_PORT=6379
       - PROJECT_CACHE_TYPE=redis
