--- a/Suite_qa/docker-compose.yml
+++ b/Suite_qa/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - REDIS_SERVER=localhost
       - REDIS_PORT=6379
       - PROJECT_CACHE_TYPE=redis
+      - server.servlet.context-path=/users-api
     network_mode: host
     entrypoint:
       - java
